--- a/about.html
+++ b/about.html
@@ -3,7 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <style>
+        body {
+            background-color: #333;
+            color: #fff;
+            font-family: 'Noto Sans SC', sans-serif;
+        }
+        .social-icons {
+            margin-top: 20px;
+        }
+        .social-icons img {
+            height: 40px;
+            width: 40px;
+            margin-right: 10px;
+        }
+        h2 {
+            border-bottom: 2px solid #555;
+            padding-bottom: 10px;
+        }
+        footer {
+            margin-top: 30px;
+            padding: 20px 0;
+            text-align: center;
+            border-top: 1px solid #555;
+        }
+    </style>
     <title>关于我 - 极客科技GeekTech</title>
 </head>
 <body>
@@ -20,7 +46,16 @@
     <main class="container">
         <section id="about">
             <h2>关于我</h2>
+            <p>探索科技的奇迹，分享知识的力量。</p>
             <p>微信公众号：极客科技GeekTech</p>
+            <p>感谢您的关注</p>
+            <p>网站目前比较简陋，正在完善中</p>
+            <div class="social-icons">
+                <!-- 在这里添加您的社交媒体图标 -->
+                <!-- 例如： -->
+                <!-- <img src="path-to-your-wechat-icon.svg" alt="微信"> -->
+                <!-- 确保您有这些图标的使用权 -->
+            </div>
         </section>
     </main>
     <footer class="container">
@@ -28,3 +63,4 @@
     </footer>
 </body>
 </html>
+
