--- a/posts.html
+++ b/posts.html
@@ -25,6 +25,8 @@
                 <li><a href="post2.html">巨魔商店 - 2024-04-12</a></li>
                 <li><a href="post3.html">小火箭shadowrocket - 2024-04-12</a></li>
                 <li><a href="post4.html">虚拟定位 - 2024-04-12</a></li>
+                <li><a href="post5.html">大学资料 - 2024-04-12</a></li>
+                <li><a href="post6.html">简历模板 - 2024-04-12</a></li>
                 <!-- 更多博文链接可以添加在这里 -->
             </ul>
         </section>
