--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
-    <title>极客科技GeekTech</title>
+    <style>
+        body {
+            background: url('data:image/svg+xml;utf8,<svg ...>...</svg>') repeat;
+            background-color: #1c1c1c;
+            color: white;
+        }
+    </style>
+    <title>首页 - 极客科技GeekTech</title>
 </head>
 <body>
     <nav class="container-fluid">
@@ -28,12 +35,12 @@
             </section>
             <section id="posts">
                 <h2>最新博文</h2>
-                <p>点击下面的链接阅读我的最新推文。</p>
+                <p>推文资源放在这里。</p>
                 <a href="posts.html" target="_blank">查看博文</a>
             </section>
             <section id="about">
                 <h2>关于我</h2>
-                <p>点击下面的链接深入了解我的背景和兴趣。</p>
+                <p>简介。</p>
                 <a href="about.html" target="_blank">更多关于我</a>
             </section>
         </div>
