--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<div class="search-bar" style="margin-top: 20px; max-width: 500px; margin-left: auto; margin-right: auto;">
+    <form action="search.html" method="get">
+        <div style="display: flex;">
+            <input type="search" name="q" placeholder="搜索文章、资源..." style="flex: 1; padding: 12px; border-radius: 20px 0 0 20px; border: none; font-size: 16px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+            <button type="submit" style="background: linear-gradient(90deg, #36d1c4 50%, #5b86e5 95%); color: white; border: none; padding: 0 20px; border-radius: 0 20px 20px 0; cursor: pointer;">
+                🔍
+            </button>
+        </div>
+    </form>
+</div>
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
