Upload new website files

--- a/about.html
+++ b/about.html
@@ -11,7 +11,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -54,5 +56,7 @@
 <footer>
     <p>© 2024 极客科技GeekTech | 探索科技的奇迹，分享知识的力量</p>
 </footer>
+<script src="common.js" defer></script>
+<script src="theme.js" defer></script>
 </body>
 </html>
