--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <title>首页 - 极客科技GeekTech</title>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <style>
         .search-bar {
@@ -121,5 +123,7 @@ if(wBtn){
     };
 }
 </script>
+<script src="common.js" defer></script>
+<script src="theme.js" defer></script>
 </body>
 </html>
