--- a/post5.html
+++ b/post5.html
@@ -35,7 +35,9 @@
     <link rel="manifest" href="site.webmanifest">
     
     <!-- 样式表 -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     
     <title>大学资料 - 极客科技GeekTech</title>
@@ -156,5 +158,7 @@
 <footer>
     <p>© 2024 极客科技GeekTech | 探索科技的奇迹，分享知识的力量</p>
 </footer>
+<script src="common.js" defer></script>
+<script src="theme.js" defer></script>
 </body>
 </html>
