--- a/404.html
+++ b/404.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>页面未找到 - 极客科技GeekTech</title>
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<style>
 		.error-container {
@@ -50,5 +52,7 @@
 <footer>
 	<p>© 2024 极客科技GeekTech | 探索科技的奇迹，分享知识的力量</p>
 </footer>
+<script src="common.js" defer></script>
+<script src="theme.js" defer></script>
 </body>
 </html>
