--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>联系我们 - 极客科技GeekTech</title>
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<style>
 		.form-group {
@@ -134,5 +136,7 @@
 		// 成功提交后的处理可以添加到这里
 	});
 </script>
+<script src="common.js" defer></script>
+<script src="theme.js" defer></script>
 </body>
 </html>
