Upload new website files

--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>关于我 - 极客科技GeekTech</title>
-    <meta name="description" content="了解极客科技GeekTech - 分享科技资源和知识的技术博客">
+    <title>关于我 - 极客科技GeekTech – 极客科技 GeekTech</title>
+    <meta name="description" content="极客科技 GeekTech 提供高质量技术资源、开源软件与实用教程，助你高效学习与探索科技。">
     <meta name="keywords" content="极客科技,GeekTech,关于我,技术博客,资源分享">
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
