--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="极客科技GeekTech - 分享科技资源、软件工具、学习资料和实用指南。">
+    <meta name="description" content="极客科技 GeekTech 提供高质量技术资源、开源软件与实用教程，助你高效学习与探索科技。">
     <meta name="keywords" content="极客科技,开源阅读,虚拟定位,大学资料,GeekTech,技术博客">
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
-    <title>首页 - 极客科技GeekTech</title>
+    <title>极客科技 GeekTech – 技术资源分享、软件工具与学习指南</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
