--- a/post2.html
+++ b/post2.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>巨魔商店(Trollstore) - 极客科技GeekTech</title>
-    <meta name="description" content="巨魔商店(Trollstore)介绍 - iOS设备应用安装工具，无需越狱即可安装第三方应用">
+    <meta name="description" content="极客科技 GeekTech 提供高质量技术资源、开源软件与实用教程，助你高效学习与探索科技。">
     <meta name="keywords" content="巨魔商店,Trollstore,iOS,第三方应用,无需越狱,应用安装">
     <link rel="canonical" href="https://yangmaomvp.github.io/post2.html">
     
     <!-- 社交媒体分享信息 -->
-    <meta property="og:title" content="巨魔商店 - 极客科技GeekTech">
-    <meta property="og:description" content="iOS设备上的应用安装工具，无需越狱即可安装第三方应用">
-    <meta property="og:url" content="https://yangmaomvp.github.io/post2.html">
     
     <!-- 结构化数据 -->
     <script type="application/ld+json">
