--- a/post3.html
+++ b/post3.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>小火箭Shadowrocket - 极客科技GeekTech</title>
-    <meta name="description" content="小火箭Shadowrocket介绍与使用指南 - iOS和安卓平台上的网络工具，提供多种网络连接选项">
+    <meta name="description" content="极客科技 GeekTech 提供高质量技术资源、开源软件与实用教程，助你高效学习与探索科技。">
     <meta name="keywords" content="小火箭,Shadowrocket,iOS,安卓,网络工具,网络连接,共享账号">
     <link rel="canonical" href="https://yangmaomvp.github.io/post3.html">
     
     <!-- 社交媒体分享信息 -->
-    <meta property="og:title" content="小火箭Shadowrocket - 极客科技GeekTech">
-    <meta property="og:description" content="iOS和安卓平台上的强大网络工具，提供多种网络连接选项">
-    <meta property="og:url" content="https://yangmaomvp.github.io/post3.html">
     
     <!-- 结构化数据 -->
     <script type="application/ld+json">
