--- a/posts.html
+++ b/posts.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>博文列表 - 极客科技GeekTech</title>
-    <meta name="description" content="极客科技GeekTech的博文列表 - 包括开源阅读、巨魔商店、大学资料等实用资源分享">
+    <title>博文列表 - 极客科技GeekTech – 极客科技 GeekTech</title>
+    <meta name="description" content="极客科技 GeekTech 提供高质量技术资源、开源软件与实用教程，助你高效学习与探索科技。">
     <meta name="keywords" content="极客科技,博客,技术文章,资源分享,工具推荐">
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
