--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li><a href="contact.html">联系我们</a></li>
         </ul>
     </nav>
-    <h1>极客科技GeekTech</h1>
+    <canvas id="fuzzy-title" data-text="极客科技GeekTech"></canvas>
     <p>探索科技的奇迹，分享知识的力量</p>
     
     <div class="search-bar">
