--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
             <li><a href="contact.html">联系我们</a></li>
         </ul>
     </nav>
-    <canvas id="fuzzy-title" data-text="极客科技GeekTech"></canvas>
+    
+<div class="focus-container" id="true-focus" data-words="极客科技 GeekTech"></div>
+
     <p>探索科技的奇迹，分享知识的力量</p>
     
     <div class="search-bar">
@@ -125,5 +127,6 @@ if(wBtn){
 </script>
 <script src="common.js" defer></script>
 <script src="theme.js" defer></script>
+  <script src="true-focus.js"></script>
 </body>
 </html>
