--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="极客科技 GeekTech 提供高质量技术资源、开源软件与实用教程，助你高效学习与探索科技。">
-    <meta name="keywords" content="极客科技,开源阅读,虚拟定位,大学资料,GeekTech,技术博客">
-    <link rel="icon" href="favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
-    <title>极客科技 GeekTech – 技术资源分享、软件工具与学习指南</title>
+  <title>极客科技 GeekTech 博客</title>
+  <meta name="description" content="欢迎来到 GeekTech 博客，这里分享 AI 技术、前沿硬件与极客资讯。">
+  <meta name="keywords" content="GeekTech, 博客, AI, 极客, 科技, 前沿, 智能硬件">
+  <meta property="og:title" content="极客科技 GeekTech 博客" />
+  <meta property="og:description" content="探索 AI 与极客科技的世界。" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://yourdomain.com/favicon-512.png" />
+  <meta property="og:url" content="https://yourdomain.com" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="favicon.ico" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
@@ -43,6 +44,29 @@
     </style>
 </head>
 <body>
+<!-- Gradient Text 主标题 -->
+<div class="animated-gradient-text custom-class">
+  <div class="text-content" style="background-image: linear-gradient(to right, #40ffaa, #4079ff, #40ffaa, #4079ff, #40ffaa); animation-duration: 3s;">
+    极客科技GeekTech
+  </div>
+</div>
+
+<!-- Rotating Text 副标题关键词 -->
+<!-- Scroll Reveal Section Title -->
+<h2 class="scroll-reveal">探索我们的文章与资源</h2>
+
+<div class="rotating-text-wrapper">
+  <span class="rotating-text">AI 技术</span>
+  <span class="rotating-text">智能硬件</span>
+  <span class="rotating-text">前沿科技</span>
+</div>
+
+<!-- Falling Text 欢迎语 -->
+<div class="falling-text">欢迎来到 GeekTech 世界</div>
+
+<!-- Blur Text 提示信息 -->
+<div class="blur-text">探索更多精彩内容</div>
+
 <div class="bg-glow"></div>
 <header>
     <nav class="top-nav">
@@ -128,5 +152,9 @@ if(wBtn){
 <script src="common.js" defer></script>
 <script src="theme.js" defer></script>
   <script src="true-focus.js"></script>
+
+<!-- 返回顶部按钮 -->
+<button id="backToTop" title="回到顶部">↑</button>
+
 </body>
 </html>
