Upload new website files

--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>联系我们 - 极客科技GeekTech – 极客科技 GeekTech</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
-	<style>
+<html lang="zh"><head><meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/><title>联系我们 - 极客科技GeekTech – 极客科技 GeekTech</title><link href="https://fonts.googleapis.com" rel="preconnect"/><link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/><link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&amp;display=swap" rel="stylesheet"/><link href="style.css" rel="stylesheet"/><style>
 		.form-group {
 			margin-bottom: 20px;
 		}
@@ -48,80 +39,7 @@
 		.contact-method h3 {
 			margin-top: 0;
 		}
-	</style>
-</head>
-<body>
-<div class="bg-glow"></div>
-<header>
-	<nav class="top-nav">
-		<a href="index.html" class="site-title">极客科技GeekTech</a>
-		<ul>
-			<li><a href="index.html">首页</a></li>
-			<li><a href="posts.html">博文</a></li>
-			<li><a href="about.html">关于我</a></li>
-			<li><a href="contact.html">联系我们</a></li>
-		</ul>
-	</nav>
-	<h1>联系我们</h1>
-</header>
-<main>
-	<section class="card">
-		<h2>给我们留言</h2>
-		<p>有问题或建议？请填写以下表单与我们联系，我们会尽快回复您。</p>
-		
-		<form id="contact-form" action="https://formspree.io/f/your-formspree-endpoint" method="POST">
-			<div class="form-group">
-				<label for="name">姓名</label>
-				<input type="text" id="name" name="name" required>
-			</div>
-			
-			<div class="form-group">
-				<label for="email">电子邮箱</label>
-				<input type="email" id="email" name="email" required>
-			</div>
-			
-			<div class="form-group">
-				<label for="subject">主题</label>
-				<select id="subject" name="subject">
-					<option value="question">问题咨询</option>
-					<option value="feedback">网站反馈</option>
-					<option value="cooperation">合作提案</option>
-					<option value="other">其他</option>
-				</select>
-			</div>
-			
-			<div class="form-group">
-				<label for="message">留言内容</label>
-				<textarea id="message" name="message" required></textarea>
-			</div>
-			
-			<button type="submit" class="fancy-btn">发送留言</button>
-		</form>
-	</section>
-	
-	<section class="card">
-		<h2>其他联系方式</h2>
-		
-		<div class="contact-methods">
-			<div class="contact-method">
-				<h3>微信公众号</h3>
-				<p>关注"极客科技GeekTech"获取最新资讯</p>
-				<!-- 可以添加二维码图片 -->
-			</div>
-			
-			<div class="contact-method">
-				<h3>GitHub</h3>
-				<p><a href="https://github.com/yangmaoMVP/yangmaoMVP.github.io" target="_blank">yangmaoMVP/yangmaoMVP.github.io</a></p>
-				<p>欢迎在GitHub Issues上提出问题和建议</p>
-			</div>
-		</div>
-	</section>
-</main>
-<footer>
-	<p>© 2024 极客科技GeekTech | 探索科技的奇迹，分享知识的力量</p>
-</footer>
-
-<script>
+	</style><meta content="极客科技GeekTech个人博客，专注前沿科技、AI资源与开发实践。" name="description"/></head><body><div class="bg-glow"></div><header><nav class="top-nav"><a class="site-title" href="index.html">极客科技GeekTech</a><ul><li><a href="index.html">首页</a></li><li><a href="posts.html">博文</a></li><li><a href="about.html">关于我</a></li><li><a href="contact.html">联系我们</a></li><li><button aria-label="切换暗黑模式" id="theme-toggle">🌙</button></li></ul></nav><h1>联系我们</h1></header><main><section class="card"><h2>给我们留言</h2><p>有问题或建议？请填写以下表单与我们联系，我们会尽快回复您。</p><form action="https://formspree.io/f/your-formspree-endpoint" id="contact-form" method="POST"><div class="form-group"><label for="name">姓名</label><input id="name" name="name" required="" type="text"/></div><div class="form-group"><label for="email">电子邮箱</label><input id="email" name="email" required="" type="email"/></div><div class="form-group"><label for="subject">主题</label><select id="subject" name="subject"><option value="question">问题咨询</option><option value="feedback">网站反馈</option><option value="cooperation">合作提案</option><option value="other">其他</option></select></div><div class="form-group"><label for="message">留言内容</label><textarea id="message" name="message" required=""></textarea></div><button class="fancy-btn" type="submit">发送留言</button></form></section><section class="card"><h2>其他联系方式</h2><div class="contact-methods"><div class="contact-method"><h3>微信公众号</h3><p>关注"极客科技GeekTech"获取最新资讯</p><!-- 可以添加二维码图片 --></div><div class="contact-method"><h3>GitHub</h3><p><a href="https://github.com/yangmaoMVP/yangmaoMVP.github.io" target="_blank">yangmaoMVP/yangmaoMVP.github.io</a></p><p>欢迎在GitHub Issues上提出问题和建议</p></div></div></section></main><footer><p>© 2024 极客科技GeekTech | 探索科技的奇迹，分享知识的力量</p></footer><script>
 	// 简单的表单验证
 	document.getElementById('contact-form').addEventListener('submit', function(e) {
 		const email = document.getElementById('email').value;
@@ -135,8 +53,4 @@
 		
 		// 成功提交后的处理可以添加到这里
 	});
-</script>
-<script src="common.js" defer></script>
-<script src="theme.js" defer></script>
-</body>
-</html>
+</script><script defer="" src="common.js"></script><script defer="" src="theme.js"></script></body></html>
