Upload new website files

--- a/404.html
+++ b/404.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-<html lang="zh"><head><meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://fonts.googleapis.com" rel="preconnect"/><link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/><link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&amp;display=swap" rel="stylesheet"/><link href="style.css" rel="stylesheet"/><style>
+<html lang="zh"><head><meta charset="utf-8"/><meta content="width=device-width, initial-scale=1" name="viewport"/><title>页面未找到 - 极客科技GeekTech</title><link href="https://fonts.googleapis.com" rel="preconnect"/><link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/><link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&amp;display=swap" rel="stylesheet"/><link href="style.css" rel="stylesheet"/><style>
 		.error-container {
 			text-align: center;
 			padding: 50px 0;
@@ -19,14 +18,4 @@
 			margin: 20px 0;
 			color: #355990;
 		}
-	</style><meta content="极客科技GeekTech个人博客，专注前沿科技、AI资源与开发实践。" name="description"/><meta content="website" property="og:type"/><meta content="页面未找到 - 极客科技GeekTech" property="og:title"/><meta content="极客科技GeekTech个人博客，专注前沿科技、AI资源与开发实践。" property="og:description"/><meta content="favicon-512.png" property="og:image"/><meta content="summary_large_image" name="twitter:card"/><meta content="页面未找到 - 极客科技GeekTech" name="twitter:title"/><meta content="极客科技GeekTech个人博客，专注前沿科技、AI资源与开发实践。" name="twitter:description"/><meta content="favicon-512.png" name="twitter:image"/><link href="https://geektech.example.com/404.html" rel="canonical"/></head><body><a class="skip-link" href="#main-content">跳到内容</a><div class="bg-glow" id="main-content"></div><header><nav class="top-nav"><ul><li><a href="index.html">首页</a></li><li><a href="posts.html">博文</a></li><li><a href="about.html">关于我</a></li><li><button aria-label="切换暗黑模式" id="theme-toggle">🌙</button></li></ul></nav></header><main><section class="card error-container"><h1 class="error-code">404</h1><p class="error-text">抱歉，您访问的页面不存在</p><p>您可能输入了错误的地址，或者该页面已被移动或删除。</p><a class="fancy-btn" href="index.html">返回首页</a></section></main><footer></footer><script defer="" src="common.js"></script><script defer="" src="theme.js"></script><script>
-const observer = new IntersectionObserver(entries=>{
-  entries.forEach(e=>{
-     if(e.isIntersecting){
-       e.target.classList.add('fade-in');
-       observer.unobserve(e.target);
-     }
-  });
-},{threshold:0.1});
-document.querySelectorAll('.post-list li, .post-card, img').forEach(el=>{ observer.observe(el); });
-</script></body></html>
+	</style><meta content="极客科技GeekTech个人博客，专注前沿科技、AI资源与开发实践。" name="description"/></head><body><div class="bg-glow"></div><header><nav class="top-nav"><a class="site-title" href="index.html">极客科技GeekTech</a><ul><li><a href="index.html">首页</a></li><li><a href="posts.html">博文</a></li><li><a href="about.html">关于我</a></li><li><button aria-label="切换暗黑模式" id="theme-toggle">🌙</button></li></ul></nav></header><main><section class="card error-container"><h1 class="error-code">404</h1><p class="error-text">抱歉，您访问的页面不存在</p><p>您可能输入了错误的地址，或者该页面已被移动或删除。</p><a class="fancy-btn" href="index.html">返回首页</a></section></main><footer><p>© 2024 极客科技GeekTech | 探索科技的奇迹，分享知识的力量</p></footer><script defer="" src="common.js"></script><script defer="" src="theme.js"></script></body></html>
